--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Letterbox is a dating app that enables you to find people with compatible mindsets and opinions.
 
 baseurl: "/letterbox-landing" # the subpath of your site, e.g. /blog/
-url: "http://getletterbox.com" # the base hostname & protocol for your site
+url: "http://letterboxdev.github.io" # the base hostname & protocol for your site
 
 email: letterboxdev@gmail.com
 facebook_link: ""
