--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: "/letterbox-landing" # the subpath of your site, e.g. /blog/
 url: "http://getletterbox.com" # the base hostname & protocol for your site
 
 email: letterboxdev@gmail.com
-facebook_link: "facebook.com/getletterbox"
+facebook_link: "http://www.facebook.com/getletterbox"
 app_store_link: ""
 play_store_link: "https://play.google.com/store/apps/details?id=com.getletterbox.letterbox"
 
