--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://getletterbox.com" # the base hostname & protocol for your site
 
 email: contact@getletterbox.com
 facebook_link: "http://www.facebook.com/getletterbox"
-app_store_link: ""
+app_store_link: "https://itunes.apple.com/us/app/letterbox-discover-answer/id1054804304?ls=1&mt=8"
 play_store_link: "https://play.google.com/store/apps/details?id=com.getletterbox.letterbox"
 
 # Build settings
