--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ email: contact@getletterbox.com
 facebook_link: "http://www.facebook.com/getletterbox"
 app_store_link: "https://itunes.apple.com/us/app/letterbox-discover-answer/id1054804304?ls=1&mt=8"
 play_store_link: "https://play.google.com/store/apps/details?id=com.getletterbox.letterbox"
+web_link: "http://web.getletterbox.com"
 
 # Build settings
 markdown: kramdown
