--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ markdown: kramdown
 
 
 # Statistics
+stats_last_update: "18th November 2015, 6:41am"
+
 registered_users: "962"
 female: "257"
 male: "705"
